# ynab-mcp

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  claude_desktop_config.json  compose.yml  pyproject.toml
src/: __init__.py  debug_utils.py  server.py
src/tools/: __init__.py  accounts.py  budgets.py  categories.py  payees.py  transactions.py  user.py
ynab_mcp_server/: __init__.py  __main__.py  server.py
ynab_mcp_server/tools/: accounts.py  budgets.py  categories.py  payees.py  transactions.py  user.py
